--- a/src/components/sidebar.scss
+++ b/src/components/sidebar.scss
@@ -14,6 +14,7 @@ $splash-color: #5a5a5a;
 
 .nav {
   // Toggle Button
+  position: relative;
   &__toggle {
     display: none;
     @include respond-to(mobile) {
@@ -35,8 +36,11 @@ $splash-color: #5a5a5a;
     &:focus {
       background-color: rgba(0, 0, 0, 0.5);
     }
+    button {
+      z-index: 1000;
+    }
   }
-}
+
 
 // ---------------------------
 // SVG Menu Icon
@@ -73,7 +77,7 @@ $splash-color: #5a5a5a;
 // Circular Splash Background
 // ---------------------------
 
-.splash::after {
+ .splash {
   position: absolute;
   top: 40px;
   right: 40px;
@@ -88,25 +92,20 @@ $splash-color: #5a5a5a;
 
   // screen diameter can be 142vmax at most,
   // circle needs to be twice that size to cover it
-  width: 284vmax;
-  height: 284vmax;
-  top: -142vmax;
-  left: -142vmax;
-  width: 284vmax;
-  height: 284vmax;
-  top: -142vmax;
-  left: -142vmax;
-
-  // transform: scale(0);
-  transform-origin: 50% 50%;
+  width: 84vmax;
+  height: 84vmax;
+  top: 0;
+  left: 0;
+  // transform: scale(0.1);
+  // transform-origin: 50% 50%;
   // transition: transform 0.5s cubic-bezier(0.755, 0.05, 0.855, 0.06);
-
+  // transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
   // will-change tells the browser we plan to
   // animate this property in the near future
-  will-change: transform;
+  // will-change: transform;
   // }
 }
-
+}
 // ---------------------------
 // Active State
 // ---------------------------
