--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -6,6 +6,7 @@ $break-lg: 1024px;
 $vw-width: 1920px;
 $fontColour: rgba(0,0,0,0.7);
 $bg-dropdown-color: white;
+$splash-color: #5a5a5a;
 
 // Mixins
 @mixin transition-fade {
