--- a/src/components/navbar/header.scss
+++ b/src/components/navbar/header.scss
@@ -1,6 +1,6 @@
-@import "../scss/img-post";
-@import "../scss/mixins";
-// @import "../scss/mobile";
+@import "../../scss/img-post";
+@import "../../scss/mixins";
+
 header {
     position: fixed;
     z-index: 1000;
@@ -17,7 +17,7 @@ header {
         max-width: $vw-width;
         margin-top: 2.3rem;
         @include transition-fade;
-        #logo:not([src]) {
+        #logo {
             content: $logo;
             max-height: 4rem;
             margin: 0.7rem 0 0.7rem 5vw;
@@ -87,18 +87,12 @@ header {
                 flex-direction: column;
                 justify-content: center;
                 text-align: center;
-                margin: 0;
-                position: absolute;
-                transform: translate(50%, 50%);
-                top: 100%;
-                right: 50%;
-                z-index: 50;
-                visibility: hidden;
+                margin: 15rem 0 0 0;
+                z-index: 500;
+                padding: 0;
             }
             &__item {
-                opacity: 0;
-                transition: all 0.2s cubic-bezier(0, 0.995, 0.99, 1) 0.5s;
-                margin: 1rem 0;
+                margin: 0.7rem 0;
                 font-size: 1.8rem;
                 &:hover,
                 &:focus {
@@ -114,18 +108,13 @@ header {
                 }
             }
         }
-        .nav:target,
-        .nav--open {
-            .nav {
-                &__menu {
-                    visibility: visible;
-                }
-        
-                &__item {
-                    opacity: 1;
-                    transform: translateY(0);
-                }
-            }
+        .sidebar {
+            position: absolute;
+            width: 100%;
+            height: 150vh;
+            top: 0%;
+            margin: 0;
+            background-color: $splash-color;
         }
     }
 }
