--- a/src/components/navbar/header.scss
+++ b/src/components/navbar/header.scss
@@ -83,13 +83,16 @@ header {
                 border-bottom: none;
             }
             &__menu {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                text-align: center;
-                margin: 15rem 0 0 0;
-                z-index: 500;
-                padding: 0;
+                display: none;
+                &__sidebar {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    text-align: center;
+                    margin: 15rem 0 0 0;
+                    z-index: 500;
+                    padding: 0;
+                }
             }
             &__item {
                 margin: 0.7rem 0;
@@ -103,9 +106,9 @@ header {
                 .triangle-up {
                     display: none;
                 }
-                &.menu_mobile {
-                    display: block;
-                }
+                // &.menu_mobile {
+                //     display: block;
+                // }
             }
         }
         .sidebar {
