--- a/src/components/slider/dropdown.scss
+++ b/src/components/slider/dropdown.scss
@@ -3,30 +3,30 @@
 
 .dropdown {
     position: relative;
-    &-6 {
-        position: relative;
-        .triangle-up {
-            position: absolute;
-            top: -1000%;
-            opacity: 0;
-            right: 13%;
-            width: 0;
-            height: 0;
-            transition-delay: 500ms;
-            border-left: 15px solid transparent;
-            border-right: 15px solid transparent;
-            border-bottom: 10px solid;
-            border-bottom-color: $bg-dropdown-color;
-            &.show {
-                top: 2.5rem;
-                @include dropdown-fade;
-            }
-        }
-    }
+    // &-6 {
+    //     position: relative;
+    //     .triangle-up {
+    //         position: absolute;
+    //         top: -1000%;
+    //         opacity: 0;
+    //         right: 13%;
+    //         width: 0;
+    //         height: 0;
+    //         transition-delay: 500ms;
+    //         border-left: 15px solid transparent;
+    //         border-right: 15px solid transparent;
+    //         border-bottom: 10px solid;
+    //         border-bottom-color: $bg-dropdown-color;
+    //         &.show {
+    //             top: 2.5rem;
+    //             @include dropdown-fade;
+    //         }
+    //     }
+    // }
     &_menu {
         display: block;
         position: absolute;
-        top: 50%;
+        // top: 50%;
         // opacity: 0;
         left: 0%;
         width: 100%;
@@ -34,7 +34,7 @@
         max-height: auto;
         // transition-delay: 500ms;
         padding: 0;
-        perspective: 1000px;
+        // perspective: 1000px;
         // overflow-x: hidden;
         background-color: $bg-dropdown-color;
         // &.show,
@@ -42,19 +42,19 @@
         //     top: 90%;
         //     @include dropdown-fade;
         // }
-        .swiper-container {
-            width: 100%;
+        // .swiper-container {
+            // width: 100%;
             // max-height: 250px;
-            padding: 1.2rem 0;
-        }
+            // padding: 1.2rem 0;
+        // }
         .swiper-slide {
             text-align: center;
             font-size: 18px;
             background: $bg-dropdown-color;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
+            // display: flex;
+            // flex-direction: column;
+            // justify-content: center;
+            // align-items: center;
             a {
                 text-decoration: none;
                 img {
