--- a/src/scss/_img-post.scss
+++ b/src/scss/_img-post.scss
@@ -1,8 +1,8 @@
 // Logo
 $logo: url(../../img/Logotipo/logo.png);
 // Main-banner
-$banner: url(../../img/Bannerdesktop1920.png);
-$banner-mobile: url(../../img/mobile/bannnermobile-480.jpg);
+$banner: url(../../img/Bannerdesktop1920.jpg);
+$banner-mobile: url(../../img/mobile/bannermobile480.jpg);
 
 // About me picture
 $valen-pic: url(../../img/foto-avatar-588.png);
