--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -7,6 +7,7 @@ $vw-width: 1920px;
 $fontColour: rgba(0,0,0,0.7);
 $bg-dropdown-color: white;
 $splash-color: #5a5a5a;
+$bg-header:  rgba(0, 0, 0, 0.6);
 
 // Mixins
 @mixin transition-fade {
