--- a/src/components/header/mobileSideBar/toggleButton.scss
+++ b/src/components/header/mobileSideBar/toggleButton.scss
@@ -1,5 +1,5 @@
-@import "../../scss/img-post";
-@import "../../scss/mixins";
+@import "../../../scss/img-post";
+@import "../../../scss/mixins";
 
 
 // calculate a circle's circumference based on radius
