--- a/src/components/header/slider/dropdown.scss
+++ b/src/components/header/slider/dropdown.scss
@@ -1,5 +1,5 @@
-@import "../../scss/img-post";
-@import "../../scss/mixins";
+@import "../../../scss/img-post";
+@import "../../../scss/mixins";
 
 .dropdown {
     position: relative;
@@ -25,9 +25,9 @@
     // }
     &_menu {
         // display: block;
-        position: absolute;
+        // position: absolute;
         // top: 50%;
-        // opacity: 0;
+        margin: 0 auto;
         left: 0%;
         width: 100%;
         max-width: $vw-width;
@@ -35,7 +35,7 @@
         // transition-delay: 500ms;
         padding: 0;
         // perspective: 1000px;
-        // overflow-x: hidden;
+        overflow: hidden;
         // background-color: $bg-dropdown-color;
         // &.show,
         // &:hover {
@@ -46,7 +46,7 @@
             // width: 100%;
             // max-height: 250px;
             padding-bottom: 1.2rem;
-            background-color: $bg-header;
+            // background-color: $bg-header;
         }
         .swiper-pagination {
             margin-bottom: 0.8rem;
