--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+@import "https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap";
 body {
   margin: 0;
   font-family: "Roboto", sans-serif, "Segoe UI", "Helvetica Neue", Arial,
