--- a/src/scss/_img-post.scss
+++ b/src/scss/_img-post.scss
@@ -10,16 +10,16 @@ $my-works: url(../../img/myworks-19.png);
 $works-mobile: url(../../img/mobile/Myworkmobile-20.png);
 
 // Cover:
-$cover-1: url(../../img/Yum/yumCover960.jpg);
-$cover-2: url(../../img/STB/STBCover960.jpg); //STB
-$cover-3: url(../../img/SDO/sdoCover960.jpg); //SDO
-$cover-4: url(../../img/Colores/coloresCover960.jpg);
-$cover-5: url(../../img/HCB/HCBCover960.jpg); //HCB
-$cover-6: url(../../img/Calza/calzaCover960.jpg);
-$cover-7: url(../../img/Malteadas/malteadasCover960.jpg);
-$cover-8: url(../../img/Bonf/bonfCover960.jpg);
-$cover-9: url(../../img/CHH/CHHCover960.jpg);
-$cover-10: url(../../img/Yumlato/yumlatoCover960.jpg);
+$cover-1: url(../img/Yum/yumCover960.jpg);
+$cover-2: url(../img/STB/STBCover960.jpg); //STB
+$cover-3: url(../img/SDO/sdoCover960.jpg); //SDO
+$cover-4: url(../img/Colores/coloresCover960.jpg);
+$cover-5: url(../img/HCB/HCBCover960.jpg); //HCB
+$cover-6: url(../img/Calza/calzaCover960.jpg);
+$cover-7: url(../img/Malteadas/malteadasCover960.jpg);
+$cover-8: url(../img/Bonf/bonfCover960.jpg);
+$cover-9: url(../img/CHH/CHHCover960.jpg);
+$cover-10: url(../img/Yumlato/yumlatoCover960.jpg);
 
 // Cover mobile pictures & Carousel Swipe Slide pictures:
 $coverMbl-1: url(../img/Yum/yumCover480.jpg);
@@ -34,28 +34,28 @@ $coverMbl-9: url(../img/CHH/CHHCover480.jpg);
 $coverMbl-10: url(../img/Yumlato/yumlatoCover480.jpg);
 
 // Projects images desktop
-$project-1: url(../../img/Yum/yum1920.jpg);
-$project-2: url(../../img/STB/STB1920.jpg);
-$project-3: url(../../img/SDO/SDO1920.jpg);
-$project-4: url(../../img/Colores/Colores1920.jpg);
-$project-5: url(../../img/HCB/HCB1920.jpg);
-$project-6: url(../../img/Calza/Calza1920.jpg);
-$project-7: url(../../img/Malteadas/Malteadas1920.jpg);
-$project-8: url(../../img/Bonf/Bonf1920.jpg);
-$project-9: url(../../img/CHH/CHH1920.jpg);
-$project-10: url(../../img/Yumlato/yumlato1920.jpg);
+$project-1: url(../img/Yum/yum1920.jpg);
+$project-2: url(../img/STB/STB1920.jpg);
+$project-3: url(../img/SDO/SDO1920.jpg);
+$project-4: url(../img/Colores/Colores1920.jpg);
+$project-5: url(../img/HCB/HCB1920.jpg);
+$project-6: url(../img/Calza/Calza1920.jpg);
+$project-7: url(../img/Malteadas/Malteadas1920.jpg);
+$project-8: url(../img/Bonf/Bonf1920.jpg);
+$project-9: url(../img/CHH/CHH1920.jpg);
+$project-10: url(../img/Yumlato/yumlato1920.jpg);
 
 // Projects images mobile
-$projectMb-1: url(../../img/Yum/yum1024.jpg);
-$projectMb-2: url(../../img/STB/STB1024.jpg);
-$projectMb-3: url(../../img/SDO/SDO1024.jpg);
-$projectMb-4: url(../../img/Colores/Colores1024.jpg);
-$projectMb-5: url(../../img/HCB/HCB1024.jpg);
-$projectMb-6: url(../../img/Calza/Calza1024.jpg);
-$projectMb-7: url(../../img/Malteadas/Malteadas1024.jpg);
-$projectMb-8: url(../../img/Bonf/Bonf1024.jpg);
-$projectMb-9: url(../../img/CHH/CHH1024.jpg);
-$projectMb-10: url(../../img/Yumlato/yumlato1024.jpg);
+$projectMb-1: url(../img/Yum/yum1024.jpg);
+$projectMb-2: url(../img/STB/STB1024.jpg);
+$projectMb-3: url(../img/SDO/SDO1024.jpg);
+$projectMb-4: url(../img/Colores/Colores1024.jpg);
+$projectMb-5: url(../img/HCB/HCB1024.jpg);
+$projectMb-6: url(../img/Calza/Calza1024.jpg);
+$projectMb-7: url(../img/Malteadas/Malteadas1024.jpg);
+$projectMb-8: url(../img/Bonf/Bonf1024.jpg);
+$projectMb-9: url(../img/CHH/CHH1024.jpg);
+$projectMb-10: url(../img/Yumlato/yumlato1024.jpg);
 
 // Amount of projects
 $projects: (
