--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,7 +13,7 @@ body {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
-  color: rgb(33, 37, 41);
+  color: #212529;
   text-align: left;
   background-color: #fff;
 }
