Fixed covers images

--- a/src/scss/_img-post.scss
+++ b/src/scss/_img-post.scss
@@ -12,12 +12,12 @@ $works-mobile: url(../../img/mobile/Myworkmobile-20.png);
 // Cover:
 $cover-1: url(../img/Yum/yumCover960.jpg);
 $cover-2: url(../img/STB/STBCover960.jpg); //STB
-$cover-3: url(../img/SDO/sdoCover960.jpg); //SDO
-$cover-4: url(../img/Colores/coloresCover960.jpg);
+$cover-3: url(../img/SDO/SDOCover960.jpg); //SDO
+$cover-4: url(../img/Colores/ColoresCover960.jpg);
 $cover-5: url(../img/HCB/HCBCover960.jpg); //HCB
-$cover-6: url(../img/Calza/calzaCover960.jpg);
-$cover-7: url(../img/Malteadas/malteadasCover960.jpg);
-$cover-8: url(../img/Bonf/bonfCover960.jpg);
+$cover-6: url(../img/Calza/CalzaCover960.jpg);
+$cover-7: url(../img/Malteadas/MalteadasCover960.jpg);
+$cover-8: url(../img/Bonf/BonfCover960.jpg);
 $cover-9: url(../img/CHH/CHHCover960.jpg);
 $cover-10: url(../img/Yumlato/yumlatoCover960.jpg);
 
