--- a/src/components/grid/styles.scss
+++ b/src/components/grid/styles.scss
@@ -43,32 +43,6 @@
 .cell:hover {
   box-shadow: 0px 20px 60px -10px rgba(0, 0, 0, 0.3);
 }
-
-// .shuffle {
-//   position: absolute;
-//   top: 40px;
-//   left: 40px;
-//   padding: 0px 20px 0px 20px;
-//   width: auto;
-//   height: auto;
-//   background: white;
-//   border: solid 2px #ffaad4;
-//   border-radius: 7px;
-//   color: #ffaad4;
-//   z-index: 100;
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   cursor: pointer;
-//   font-size: 16px;
-//   font-weight: 100;
-//   line-height: 45px;
-// }
-
-// .shuffle:hover {
-//   background: #f9f9f9;
-// }
-
 .details {
   position: absolute;
   bottom: 0px;
@@ -115,16 +89,6 @@
     transition-duration: 200ms;
   }
 }
-/* .circle {
-  position: absolute;
-  top: calc(50% - 50px);
-  left: calc(50% - 50px);
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  box-shadow: 0px 20px 60px -10px rgba(0, 0, 0, 0.2);
-} */
-
 .close {
   position: absolute;
   top: 30px;
@@ -133,23 +97,10 @@
   color: #777777;
 }
 
-/* .main {
-  font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir,
-    helvetica neue, helvetica, ubuntu, roboto, noto, segoe ui, arial, sans-serif;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-} */
-
-/* .header {
-  padding: 30px 70px 30px 70px;
-  height: auto;
-  display: flex;
-} */
-
 .grid {
+  width: 80%;
+  height: calc(100vh - 16px);
+  margin: 0 auto;
   flex: 1;
   scrollbar-width: thin;
   scrollbar-color: rgba(0, 0, 0, 0.4) transparent;
@@ -165,8 +116,9 @@
   border-radius: 20px; /* roundness of the scroll thumb */
   border: 3px solid transparent; /* creates padding around scroll thumb */
 }
-
-.ant-btn-primary {
-  background-color: #ca6a9a !important;
-  border-color: #ca6a9a !important;
+@include respond-to(mobile) {
+  .grid {
+    width: 100%;
+    height: 100%;
+  }
 }
