--- a/src/components/grid/styles.scss
+++ b/src/components/grid/styles.scss
@@ -23,11 +23,7 @@
   transition: box-shadow 0.5s;
   font-size: 14px;
   /* font-weight: 500; */
-  line-height: 10px;
-  & div {
-    color: #999999;
-    mix-blend-mode: difference;
-  }
+  line-height: 15px;
 }
 
 .default {
@@ -38,6 +34,13 @@
   align-items: flex-end;
   justify-content: flex-end;
   padding: 20px;
+  &-title {
+    background-color: rgba(255,255,255,0.7);
+    border-radius: 6px 6px;
+    color: #4d4d4d;
+    padding: 1px 5px;
+    text-align: right;
+  }
 }
 
 .cell:hover {
@@ -49,7 +52,6 @@
   left: 0px;
   width: 100%;
   height: 100%;
-  /* background: #ffffffa0; */
   color: white;
   padding: 20px;
   font-weight: 100;
@@ -57,19 +59,22 @@
   flex-direction: row;
   align-items: flex-end;
   justify-content: space-between;
-  &-project {
+  &-project {    
+    background-color: rgba(255,255,255,0.3);
+    border-radius: 5px;
+    padding: 2px;
     h1 {
-      color: rgba(44, 44, 44, 0.596);
+      color: #777777;
+      // filter: invert(1);
       font-size: 18px;
       line-height: 18px;
       font-weight: 600;
       margin: 0;
       padding: 0;
-      max-width: 50px;
+      max-width: 80px;
     }
-
     p {
-      color: #777777;
+      color: #999999;
       font-size: 14px;
       line-height: 14px;
       margin: 0;
@@ -83,9 +88,12 @@
     color: #777777;
     margin: 10px;
     font-size: 40px;
+    background-color: rgba(255,255,255,0.7);
+    border-radius: 50%;
+    padding: 2px;
   }
   &-goto:hover {
-    color: #999999;
+    color: #77777780;
     transition-duration: 200ms;
   }
 }
@@ -99,11 +107,15 @@
 
 .grid {
   width: 80%;
-  height: calc(100vh - 16px);
+  max-width: $vw-width;
+  height: calc(80vh - 16px);
   margin: 0 auto;
   flex: 1;
   scrollbar-width: thin;
   scrollbar-color: rgba(0, 0, 0, 0.4) transparent;
+  & div {
+    overflow: hidden;
+  }
 }
 .grid::-webkit-scrollbar {
   width: 6px;
@@ -120,5 +132,9 @@
   .grid {
     width: 100%;
     height: 100%;
+    // z-index: 200;
+    & div {
+      overflow: visible;
+    }
   }
 }
