--- a/src/components/banner/myworks.scss
+++ b/src/components/banner/myworks.scss
@@ -2,35 +2,44 @@
 @import "../../scss/mixins";
 
 .banner-1 {
-    position: relative;
-    background-color: white;
-    max-width: 100%;
-    height: 230px;
-    overflow: hidden;
+  position: relative;
+  background-color: white;
+  max-width: 100%;
+  height: 230px;
+  overflow: hidden;
+  &-works:not([src]) {
+    content: $my-works;
+    position: absolute;
+    width: 85%;
+    top: 0%;
+    left: 200%;
+    z-index: 20;
+    opacity: 0;
+  }
+  // .left-roll {
+  //   opacity: 1;
+  //   left: 5%;
+  //     @include slide-in-right;
+  // }
+  #my-work {
+    display: block;
+    position: absolute;
+    top: 0%;
+    visibility: hidden;
+  }
+}
+@include respond-to(mobile) {
+  .banner-1 {
+    height: 180px;
     &-works:not([src]) {
-      content: $my-works;
-      position: absolute;
-      width: 85%;
-      top: 0%;
-      left: 200%;
-      z-index: 20;
-      opacity: 0;
+      content: $works-mobile;
+      max-width: 90%;
     }
     .left-roll {
-      opacity: 1;
-      left: 5%;
-    //   @include slide-in-right;
+      left: 2rem;
+    }
+    #my-work {
+      top: -38%;
     }
   }
-  @include respond-to(mobile) {
-    .banner-1 {
-      height: 180px;
-      &-works:not([src]) {
-          content: $works-mobile;
-          max-width: 90%;
-      }
-      .left-roll {
-          left: 2rem;
-      }
-  }
-  }
+}
