--- a/src/components/header/slider/dropdown.scss
+++ b/src/components/header/slider/dropdown.scss
@@ -15,6 +15,9 @@
         }
         .swiper-pagination {
             margin-bottom: 0.8rem;
+            &-bullet {
+                background: white;
+            }
         }
         .swiper-slide {
             text-align: center;
