--- a/src/components/grid/styles.scss
+++ b/src/components/grid/styles.scss
@@ -54,18 +54,19 @@
   height: 100%;
   color: white;
   padding: 20px;
-  font-weight: 100;
+  font-weight: 300;
   display: flex;
   flex-direction: row;
   align-items: flex-end;
   justify-content: space-between;
   &-project {    
-    background-color: rgba(255,255,255,0.3);
+    background-color: rgba(255,255,255,1);
     border-radius: 5px;
+    color: #777777;
     padding: 2px;
     margin: 30px;
     h1 {
-      color: #777777;
+      // color: #777777;
       // filter: invert(1);
       font-size: 18px;
       line-height: 18px;
@@ -75,7 +76,7 @@
       max-width: fit-content;
     }
     p {
-      color: #999999;
+      // color: #777777;
       font-size: 14px;
       line-height: 14px;
       margin: 0;
