--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,7 +6,7 @@ header {
     z-index: 260;
     width: 100%;
     margin: 0;
-    @include transition-fade;
+    background-image: linear-gradient(to bottom,rgba(0,0,0,.6) 5%,rgba(0,0,0,0));
 
     .nav {
         position: relative;
